Add initial expression editor workspace support